<resources>
    <string name="app_name">Quake Reporter</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="toolbar_search">Search</string>
    <string name="startTimeText">Set Start Time</string>
    <string name="endTimeText">Set End Time</string>
    <string name="orderByText">Order By</string>
    <string name="dateText">Date [YYYY-MM-DD]</string>
    <string name="timeText">Time [mm:ss]</string>
    <string name="timeZoneText">Set Time Zone</string>
    <string name="minmagText">Minimum Magnitude</string>
    <string name="maxmagText">Maximum Magnitude</string>
    <string name="doneText">Done</string>
    <string name="UTCText">Zone [00:00]</string>
    <string name="limitText">Limit</string>
    <string name="refreshText">Refresh</string>

    <string-array name="orderByArray">
        <item>Descending Time</item>
        <item>Ascending Time</item>
        <item>Descending Magnitude</item>
        <item>Ascending Magnitude</item>
    </string-array>

    <string-array name="plusMinusArray">
        <item>+</item>
        <item>-</item>
    </string-array>

    <string name="maxDateLength">10</string>
    <string name="maxTimeLength">5</string>
    <string name="maxMagnitudeLength">5</string>

</resources>
